--- a/rendimento_cotesia.html
+++ b/rendimento_cotesia.html
@@ -1,55 +1,503 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Página em construção</title>
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background: #f7f7f7;
-      font-family: Arial, sans-serif;
-    }
-    .icon svg {
-      margin-bottom: 20px;
-      width: 80px;
-      height: 80px;
-      stroke: #ff9800;
-      stroke-width: 2.5;
-      animation: hammer 0.7s infinite;
-      transform-origin: 60% 20%;
-    }
-    @keyframes hammer {
-      0% { transform: rotate(0deg);}
-      20% { transform: rotate(-30deg);}
-      40% { transform: rotate(0deg);}
-      100% { transform: rotate(0deg);}
-    }
-    .mensagem {
-      font-size: 2rem;
-      color: #333;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    .submensagem {
-      font-size: 1.1rem;
-      color: #9d0909;
-      margin-top: 6px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Rendimento (Cotesia) - Top Gun</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Ícones Lucide -->
+<script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+<style>
+  :root {
+    --primary: #16a34a;
+    --primary-light: #dcfce7;
+    --primary-dark: #15803d;
+    --background: #f8fafc;
+    --card: #ffffff;
+    --text: #1e293b;
+    --text-muted: #64748b;
+    --border: #e2e8f0;
+    --accent: #3b82f6;
+    --accent-light: #dbeafe;
+    --warning: #f59e0b;
+    --warning-light: #fef3c7;
+    --danger: #ef4444;
+    --danger-light: #fee2e2;
+    --success: #10b981;
+    --radius: 12px;
+    --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  }
+
+  * { box-sizing: border-box; margin: 0; padding: 0; }
+
+  body {
+    background: var(--background);
+    color: var(--text);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    padding-bottom: 20px;
+  }
+
+  /* Header (mesmo padrão) */
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0;
+    padding: 0;
+    background: var(--card);
+    border-bottom: 1px solid var(--border);
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    box-shadow: var(--shadow);
+    min-height: 64px;
+  }
+  header .btn.light {
+    margin-left: 16px;
+    width: auto;
+    min-width: 90px;
+    padding: 0 16px;
+    height: 48px;
+    font-size: 1rem;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+  }
+  header h1 {
+    flex: 1;
+    text-align: center;
+    margin: 0 auto 0 0;
+    font-size: 1.2rem;
+    color: var(--primary);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    justify-content: center;
+  }
+  @media (max-width: 790px) {
+    header { min-height: 56px; }
+    header .btn.light { margin-left: 8px; height: 40px; font-size: .98rem; padding: 0 10px; }
+    header h1 { font-size: 1rem; gap: 6px; }
+  }
+
+  /* Botões */
+  .btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    cursor: pointer;
+    border: 1px solid var(--border);
+    background: var(--card);
+    color: var(--text);
+    padding: 16px 0;
+    border-radius: 12px;
+    font-weight: 600;
+    font-size: 1.1rem;
+    text-decoration: none;
+    transition: all 0.2s ease;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+    width: 100%;
+    margin-bottom: 12px;
+    -webkit-tap-highlight-color: transparent;
+  }
+  .btn.neon { background: var(--primary); color: #fff; border-color: var(--primary-dark); }
+  .btn.neon:hover { background: var(--primary-dark); }
+  .btn.light { background: var(--primary-light); color: var(--primary-dark); border-color: var(--primary); }
+  .btn.warning { background: var(--warning-light); color: var(--warning); border-color: var(--warning); }
+
+  /* Layout principal */
+  .wrap { padding: 16px; display: flex; flex-direction: column; gap: 16px; max-width: 480px; margin: 0 auto; width: 100%; }
+
+  /* Cards */
+  .card { background: var(--card); border: 1px solid var(--border); border-radius: var(--radius); padding: 16px; box-shadow: var(--shadow); width: 100%; }
+  .card h2 { margin: 0 0 16px 0; font-size: 16px; color: var(--primary); display: flex; align-items: center; gap: 8px; }
+
+  /* Formulários */
+  .grid { display: flex; flex-direction: column; gap: 12px; }
+  .row { display: flex; flex-direction: column; gap: 6px; }
+
+  label { color: #2f361f; font-size: 1rem; font-weight: 500; }
+
+  input, select, textarea {
+    width: 100%;
+    background: #f8fafc;
+    color: var(--text);
+    border: 1px solid #1e304b;
+    border-radius: 8px;
+    padding: 16px 12px;
+    font-size: 1rem;
+    outline: none;
+    transition: border 0.3s, box-shadow 0.2s;
+    -webkit-appearance: none;
+    -webkit-tap-highlight-color: transparent;
+    margin-bottom: 10px;
+  }
+  input:focus, select:focus, textarea:focus { border-color: #3b82f6; box-shadow: 0 0 0 3px rgba(59,130,246,.15); }
+  input[readonly] { background-color: #f1f5f9; color: var(--text-muted); }
+
+  .rows { display: flex; flex-direction: column; gap: 16px; }
+
+  .farm {
+    border: 1px dashed var(--border);
+    border-radius: var(--radius);
+    padding: 16px;
+    background: #f8fafc;
+  }
+  .farm .top { display: flex; flex-direction: column; gap: 12px; margin-bottom: 12px; }
+  .inline { display: flex; flex-direction: column; gap: 8px; }
+  .inline-row { display: flex; gap: 8px; align-items: center; }
+  @media (max-width: 790px){ .inline-row{ flex-direction: column; align-items: stretch; } .small-input{ max-width:100%; } }
+
+  .muted { color: var(--text-muted); font-size: 13px; }
+
+  .preview {
+    white-space: pre-wrap;
+    background: #f8fafc;
+    border: 1px solid #e5e7eb;
+    border-radius: var(--radius);
+    padding: 18px;
+    min-height: 200px;
+    font-family: 'Segoe UI', Arial, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    overflow: auto;
+    max-height: 320px;
+  }
+  .sep { height: 1px; background: var(--border); margin: 16px 0; }
+
+  .badge { display: inline-flex; align-items: center; gap: 4px; font-size: 12px; padding: 4px 10px; border-radius: 999px; border: 1px solid var(--border); color: var(--text-muted); background: var(--background); }
+  .warn { color: var(--warning); }
+  .success { color: var(--success); }
+
+  .action-buttons { display: flex; flex-direction: column; gap: 8px; margin-top: 16px; }
+  .small-input { max-width: 120px; }
+</style>
 </head>
 <body>
-  <div id="icon" class="icon"></div>
-  <div class="mensagem">Página em construção</div>
-  <div class="submensagem">Estamos trabalhando para trazer novidades!</div>
-  <script>
-    // Renderiza o ícone Hammer diretamente
-    document.getElementById('icon').innerHTML = lucide.icons.Hammer({ size: 80, color: '#ff9800' });
-  </script>
+
+<header>
+  <a class="btn light" href="./"><i data-lucide="arrow-left" width="16" height="16"></i> Voltar</a>
+  <h1><i data-lucide="bar-chart-3" width="20" height="20"></i> Rendimento (Cotesia) – Top Gun</h1>
+</header>
+
+<div class="wrap">
+  <!-- Dados gerais -->
+  <section class="card">
+    <h2><i data-lucide="clipboard-list" width="18" height="18"></i> Dados gerais</h2>
+    <div class="grid">
+      <div class="row">
+        <label for="dtData">Data</label>
+        <input type="date" id="dtData">
+      </div>
+
+      <div class="row">
+        <label for="selFrente">Frente</label>
+        <select id="selFrente">
+          <option value="" selected>Selecione…</option>
+          <option value="Frente 01">Frente 01</option>
+          <option value="Frente 02">Frente 02</option>
+        </select>
+      </div>
+
+      <div class="row">
+        <label for="txtPiloto">Piloto</label>
+        <input type="text" id="txtPiloto" placeholder="Selecione a Frente" readonly title="Preenchido automaticamente pela Frente">
+      </div>
+
+      <div class="row">
+        <label for="txtDrone">Drone</label>
+        <input type="text" id="txtDrone" value="X 800">
+      </div>
+
+      <div class="row">
+        <label for="selUnidade">Unidade</label>
+        <select id="selUnidade">
+          <option>Delta - Delta</option>
+          <option>Delta - Volta Grande</option>
+        </select>
+      </div>
+    </div>
+  </section>
+
+  <!-- Fazendas -->
+  <section class="card">
+    <h2><i data-lucide="tractor" width="18" height="18"></i> Fazendas (por OS)</h2>
+
+    <div class="rows" id="rows"></div>
+
+    <div class="inline">
+      <button class="btn" id="btnAdd"><i data-lucide="plus" width="16" height="16"></i> Adicionar fazenda</button>
+      <span class="muted">Preencha a <b>OS</b> e clique "Buscar" para puxar Fazenda/Código/Área/Objetivo.</span>
+    </div>
+
+    <div class="grid" style="margin-top:12px">
+      <div class="row">
+        <label>Total hectares</label>
+        <input id="totHa" type="text" readonly>
+      </div>
+      <div class="row">
+        <label>Total de copos</label>
+        <input id="totCopos" type="text" readonly>
+      </div>
+    </div>
+  </section>
+
+  <!-- Prévia e ações -->
+  <section class="card">
+    <h2><i data-lucide="eye" width="18" height="18"></i> Prévia WhatsApp</h2>
+    <div class="preview" id="preview"></div>
+
+    <div class="sep"></div>
+
+    <div class="action-buttons">
+      <button class="btn neon" id="btnGerar"><i data-lucide="refresh-cw" width="16" height="16"></i> Gerar prévia</button>
+      <button class="btn" id="btnCopiar"><i data-lucide="copy" width="16" height="16"></i> Copiar mensagem</button>
+      <button class="btn light" id="btnWhats"><i data-lucide="message-circle" width="16" height="16"></i> Abrir no WhatsApp</button>
+      <span class="badge" id="lblInfo"></span>
+    </div>
+  </section>
+</div>
+
+<script>
+// Ícones
+lucide.createIcons();
+
+/* ===== Util ===== */
+const pad2 = n => String(n).padStart(2,'0');
+function todaySP(){ const now = new Date(); return `${now.getFullYear()}-${pad2(now.getMonth()+1)}-${pad2(now.getDate())}`; }
+function fmtBR(n, d=2){ return Number(n||0).toLocaleString('pt-BR',{minimumFractionDigits:d, maximumFractionDigits:d}); }
+function toNumBR(s){ if (typeof s === 'number') return s; const t = String(s||'').replace(/\./g,'').replace(',','.'); const n = parseFloat(t); return isNaN(n) ? 0 : n; }
+function fmtDateBRfromInput(yyyy_mm_dd){ if (!yyyy_mm_dd) return ''; const [y,m,d] = yyyy_mm_dd.split('-'); return `${d}/${m}/${y}`; }
+function nowStrSP(){ const f = new Intl.DateTimeFormat('pt-BR', { timeZone:'America/Sao_Paulo', dateStyle:'short', timeStyle:'short' }); return f.format(new Date()); }
+
+/* ===== Frente → Piloto ===== */
+const PILOTOS = { 'Frente 01': 'Caio Brito', 'Frente 02': 'Ygor Lucas' };
+function setPilotByFrente(){ const frente = document.getElementById('selFrente').value || ''; document.getElementById('txtPiloto').value = PILOTOS[frente] || ''; }
+
+/* ===== API (Apps Script Web App) ===== */
+const API_URL = 'https://script.google.com/a/macros/pulverizacoes.com/s/AKfycbyzM5P7itCGBCjGIPYfylja_c6ODdTcXrVP5sQ2e1tdljQOWKR6meRy62Put2xish0l8w/exec';
+const API_TOKEN = ''; // se proteger com token no Code.gs, coloque aqui
+
+async function lookupOS(os){
+  const params = new URLSearchParams({ action:'lookup', os, ...(API_TOKEN ? {token:API_TOKEN} : {}) });
+  const url = `${API_URL}?${params.toString()}`;
+  const res = await fetch(url, { method: 'GET' });
+  if (!res.ok) throw new Error(`HTTP ${res.status}`);
+  return res.json();
+}
+
+/* ===== UI Fazendas ===== */
+const rowsEl = document.getElementById('rows');
+
+function makeRow(prefill={}){
+  const el = document.createElement('div');
+  el.className = 'farm';
+  el.innerHTML = `
+    <div class="top">
+      <div class="inline">
+        <div class="inline-row">
+          <input type="text" class="os small-input" placeholder="Nº OS">
+          <button class="btn light buscar"><i data-lucide="search" width="14" height="14"></i> Buscar</button>
+        </div>
+        <button class="btn warning remover" title="Remover"><i data-lucide="trash-2" width="14" height="14"></i> Remover fazenda</button>
+      </div>
+      <div class="muted msg" style="min-height:20px;"></div>
+    </div>
+    <div class="grid">
+      <div class="row">
+        <label>Fazenda</label>
+        <input type="text" class="faz" readonly>
+      </div>
+      <div class="row">
+        <label>Código</label>
+        <input type="text" class="cod" readonly>
+      </div>
+      <div class="row">
+        <label>Hectares (ha)</label>
+        <input type="text" class="ha" readonly>
+      </div>
+      <div class="row">
+        <label>Qtd. Copos</label>
+        <input type="text" class="copos" placeholder="Digite a quantidade">
+      </div>
+      <div class="row">
+        <label>Objetivo</label>
+        <input type="text" class="objetivo" readonly>
+      </div>
+      <div class="row">
+        <label>Status</label>
+        <select class="status">
+          <option value="Finalizada">Finalizada</option>
+          <option value="Em andamento">Em andamento</option>
+        </select>
+      </div>
+    </div>
+  `;
+  rowsEl.appendChild(el);
+  lucide.createIcons();
+
+  const $os = el.querySelector('.os');
+  const $msg = el.querySelector('.msg');
+
+  if (prefill.os)  $os.value  = prefill.os;
+
+  el.querySelector('.remover').addEventListener('click', ()=>{ el.remove(); recalcTotals(); updatePreview(false); });
+  el.querySelector('.buscar').addEventListener('click', ()=> doLookup(el));
+  $os.addEventListener('keydown', (e)=>{ if(e.key==='Enter') doLookup(el); });
+
+  // recalcula ao digitar copos (área é puxada e readonly)
+  el.querySelector('.copos').addEventListener('input', ()=>{ recalcTotals(); updatePreview(false); });
+  el.querySelector('.status').addEventListener('change', ()=> updatePreview(false));
+
+  return el;
+}
+
+async function doLookup(el){
+  const $os = el.querySelector('.os');
+  const os = String($os.value || '').trim();
+  const $msg = el.querySelector('.msg');
+  if (!os){ $msg.innerHTML = '<span class="warn">Informe a OS.</span>'; return; }
+
+  $msg.textContent = 'Buscando...';
+  try{
+    const res = await lookupOS(os);
+    if (!res || !res.ok || !res.found || !res.items || res.items.length === 0){
+      $msg.innerHTML = '<span class="warn">OS não encontrada na planilha. Preencha manualmente.</span>';
+      return;
+    }
+    const items = res.items.slice().sort((a,b)=>{
+      const pa = (a.data||'').split('/'), pb = (b.data||'').split('/');
+      const da = pa.length===3 ? new Date(+pa[2], +pa[1]-1, +pa[0]) : new Date(0);
+      const db = pb.length===3 ? new Date(+pb[2], +pb[1]-1, +pb[0]) : new Date(0);
+      return db - da;
+    });
+    const it = items[0];
+
+    el.querySelector('.faz').value = it.fazenda || '';
+    el.querySelector('.cod').value = it.codigo  || '';
+    el.querySelector('.ha').value  = it.area ? String(it.area).replace('.', ',') : '';
+    el.querySelector('.objetivo').value = it.objetivo || '';
+
+    $msg.textContent = it.data ? `Carregado (Data ${it.data})` : 'Carregado';
+    recalcTotals();
+    updatePreview(false);
+  }catch(err){
+    $msg.innerHTML = `<span class="warn">Falha no lookup: ${err && err.message ? err.message : err}</span>`;
+  }
+}
+
+/* ===== Totais ===== */
+function recalcTotals(){
+  let tHa = 0, tCop = 0;
+  rowsEl.querySelectorAll('.farm').forEach(el=>{
+    tHa  += toNumBR(el.querySelector('.ha').value);
+    tCop += toNumBR(el.querySelector('.copos').value);
+  });
+  document.getElementById('totHa').value    = fmtBR(tHa);
+  document.getElementById('totCopos').value = fmtBR(tCop,0);
+}
+
+/* ===== Mensagem ===== */
+function buildMessage(){
+  const dt   = document.getElementById('dtData').value;
+  const fr   = document.getElementById('selFrente').value || '—';
+  const pil  = document.getElementById('txtPiloto').value || '—';
+  const dr   = document.getElementById('txtDrone').value  || '—';
+  const uni  = document.getElementById('selUnidade').value || '—';
+
+  let msg = `*Rendimento (Cotesia 🪰)Top Gun*\n\n` +
+            `*Data:* ${dt ? fmtDateBRfromInput(dt) : 'Preencher'}\n` +
+            `*Frente:* ${fr}\n` +
+            `*Piloto:* ${pil}\n` +
+            `*Drone:* ${dr}\n` +
+            `*Unidade:* ${uni}\n` +
+            `___`;
+
+  let tHa = 0, tCop = 0;
+
+  rowsEl.querySelectorAll('.farm').forEach((el, idx)=>{
+    const os   = (el.querySelector('.os').value || '').trim();
+    const faz  = (el.querySelector('.faz').value || '').trim();
+    const cod  = (el.querySelector('.cod').value || '').trim();
+    const ha   = toNumBR(el.querySelector('.ha').value);
+    const cp   = toNumBR(el.querySelector('.copos').value);
+    const obj  = (el.querySelector('.objetivo').value || '').trim();
+    const st   = el.querySelector('.status').value || '—';
+
+    tHa  += ha; tCop += cp;
+
+    msg += `\n*OS:* ${os || 'Preencher'}` +
+           `\n*Faz:* ${faz || '—'}` +
+           `\n*Cod:* ${cod || '—'}` +
+           `\n*Há:* ${fmtBR(ha)}` +
+           `\n*Qtd. Copos:* ${cp ? fmtBR(cp,0) : 'Preencher'}` +
+           `\n*Objetivo:* ${obj || '—'}` +
+           `\n*Status* ${st}` +
+           `\n————————-`;
+  });
+
+  msg += `\nTotal de copos: ${fmtBR(tCop,0)}` +
+         `\nTotal hectares: ${fmtBR(tHa)}` +
+         `\n\nRelatorio gerado: ${nowStrSP()}`;
+
+  return msg;
+}
+function updatePreview(andScroll=true){
+  const p = document.getElementById('preview');
+  p.textContent = buildMessage();
+  if (andScroll) p.scrollTop = p.scrollHeight;
+}
+
+/* ===== Init & eventos ===== */
+(function init(){
+  document.getElementById('dtData').value = todaySP();
+
+  // primeira linha
+  makeRow();
+
+  document.getElementById('btnAdd').addEventListener('click', ()=>{ makeRow(); updatePreview(false); });
+
+  document.getElementById('btnGerar').addEventListener('click', ()=>{
+    updatePreview();
+    const lblInfo = document.getElementById('lblInfo');
+    lblInfo.innerHTML = '<i data-lucide="check" width="12" height="12"></i> Prévia atualizada';
+    lucide.createIcons();
+    setTimeout(()=> lblInfo.textContent = '', 1800);
+  });
+
+  document.getElementById('btnCopiar').addEventListener('click', async ()=>{
+    const txt = buildMessage();
+    try{
+      await navigator.clipboard.writeText(txt);
+      const lblInfo = document.getElementById('lblInfo');
+      lblInfo.innerHTML = '<i data-lucide="check" width="12" height="12"></i> Copiado';
+      lucide.createIcons();
+    }catch(_e){
+      document.getElementById('lblInfo').textContent = 'Falhou ao copiar';
+    }
+    setTimeout(()=> document.getElementById('lblInfo').textContent = '', 1800);
+  });
+
+  document.getElementById('btnWhats').addEventListener('click', ()=>{
+    const url = 'https://wa.me/?text=' + encodeURIComponent(buildMessage());
+    window.open(url, '_blank');
+  });
+
+  // atualiza prévia ao mudar os dados gerais
+  ['dtData','selFrente','txtPiloto','txtDrone','selUnidade'].forEach(id=>{
+    document.getElementById(id).addEventListener('input', ()=> updatePreview(false));
+  });
+
+  // Frente → Piloto
+  document.getElementById('selFrente').addEventListener('change', ()=>{
+    setPilotByFrente();
+    updatePreview(false);
+  });
+
+  updatePreview(false);
+})();
+</script>
+
 </body>
 </html>
