--- a/rendimento_cotesia.html
+++ b/rendimento_cotesia.html
@@ -276,7 +276,7 @@ const PILOTOS = { 'Frente 01': 'Caio Brito', 'Frente 02': 'Ygor Lucas' };
 function setPilotByFrente(){ const frente = document.getElementById('selFrente').value || ''; document.getElementById('txtPiloto').value = PILOTOS[frente] || ''; }
 
 /* ===== API (Apps Script Web App) ===== */
-const API_URL = 'https://script.google.com/a/macros/pulverizacoes.com/s/AKfycbyzM5P7itCGBCjGIPYfylja_c6ODdTcXrVP5sQ2e1tdljQOWKR6meRy62Put2xish0l8w/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbzdut04haLW4Bccoh5RKKkt3emXeZ2yf8TrRS9zNimmRwASUKEDSzaN2c2s8gkcnZjCig/exec';
 const API_TOKEN = ''; // se proteger com token no Code.gs, coloque aqui
 
 async function lookupOS(os){
@@ -501,3 +501,4 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
