--- a/rendimento_cotesia.html
+++ b/rendimento_cotesia.html
@@ -428,7 +428,7 @@ function buildMessage(){
     // Adiciona emoji conforme status
     let statusStr = st;
     if (st === "Finalizada") statusStr = "✅*Finalizada*";
-    else if (st === "Em andamento") statusStr = "🟠*Em andamento*";
+    else if (st === "Em andamento") statusStr = "🟠*Em* *andamento*";
 
     tHa  += ha; tCop += cp;
 
@@ -506,4 +506,5 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
 
