--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
-      background: #0f172a;
+      background: url('fundodetela.jpg ') no-repeat center center fixed; /* Troque pelo caminho da sua imagem */
+      background-size: cover;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -173,6 +174,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
