--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
-      background: url('fundodetela.jpg ') no-repeat center center fixed; /* Troque pelo caminho da sua imagem */
+      background: url('fundodetela.png') no-repeat center center fixed; /* Troque pelo caminho da sua imagem */
       background-size: cover;
       color: #fff;
       display: flex;
@@ -174,6 +174,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
