--- a/index.html
+++ b/index.html
@@ -51,14 +51,6 @@
             border-radius: 8px;
         }
 
-        .logo-placeholder {
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 12px;
-            transition: transform 0.3s ease;
-        }
-
         .logo-placeholder:hover {
             transform: scale(1.05);
         }
@@ -352,59 +344,63 @@
             background: #0056b3;
         }
 
-        /* Logo Flutuante */
-        .logo-flutuante {
-            position: fixed;
-            top: 24px;
-            right: 24px;
-            z-index: 1000;
-            background: rgba(255, 255, 255, 0); /* opcional, para destaque */
-            border-radius: 12px;
-            padding: 8px 12px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
+        /* Header Fixo */
+        .header-fixo {
+          width: 100%;
+          background: #020202;
+          display: block;
+          justify-content: center; /* ou space-between para logo à esquerda e selo à direita */
+          align-items: center;
+          padding: 10px 0 0 0;
+          position: static; /* ou fixed se quiser sempre visível */
+          z-index: 10;
+        }
+        .logo-fixa {
+          height: 40px;
+          margin-right: 16px;
+        }
+        .selo-fixo {
+          height: 36px;
         }
 
-        @media (max-width: 600px) {
-            .logo-flutuante {
-                top: 10px;
-                right: 10px;
-                padding: 4px 8px;
-                border-radius: 8px;
-            }
+        /* Estilos para a linha com logo, selo e bandeira */
+        .logo-selo-bandeira-row {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          padding: 0 16px;
+          gap: 16px;
         }
-
-        /* Selo do Mês */
-        .selo-mes {
-          position: fixed;
-          top: 24px;
-          left: 50%;
-          transform: translateX(-50%);
-          z-index: 999;
-          background: rgba(255, 255, 255, 0); /* opcional */
-          border-radius: 50%;
-          padding: 8px;
-          box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
-          transition: transform 0.2s;
-        }
-        .selo-mes:hover {
-          transform: translateX(-50%) scale(1.08);
+        .logo-selo-bandeira-row img {
+          display: block;
         }
         @media (max-width: 600px) {
-          .selo-mes {
-            top: 10px;
-            left: 50%;
-            padding: 4px;
-            height: 40px;
-            transform: translateX(-50%);
+          .logo-selo-bandeira-row {
+            gap: 8px;
+            padding: 0 6px;
+          }
+          .logo-selo-bandeira-row img {
+            height: 24px !important;
           }
         }
     </style>
 </head>
 <body>
-    <!-- Logo Flutuante -->
+    <!-- Logo Flutuante 
     <div class="logo-flutuante">
       <img src="logo_topgun.png" alt="Logo da Empresa" style="height:200px;">
-    </div>
+    </div> -->
+
+    <!-- Header Fixo -->
+    <header class="header-fixo">
+      <!-- Linha com logo, selo e bandeira -->
+      <div class="logo-selo-bandeira-row" style="display: flex; align-items: center; justify-content: space-between; width: 100%; padding: 0 16px;">
+        <img src="logo_topgun.png" alt="Logo" style="height:40px;">
+        <img src="setembro_amarelo.png" alt="Selo do Mês" style="height:36px;">
+        <img src="https://flagcdn.com/w40/br.png" alt="Bandeira do Brasil" class="bandeira" style="height:28px; margin-left:auto;">
+      </div>
+    </header>
 
     <!-- Hero Section -->
     <section class="hero-section bg-gradient-primary text-white py-5">
@@ -606,10 +602,10 @@
         </div>
     </footer>
 
-    <!-- Selo do Mês -->
+    <!-- Selo do Mês
     <div class="selo-mes">
       <img src="setembro_amarelo.png" alt="Selo do Mês" style="height:200px;">
-    </div>
+    </div> -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
