--- a/index.html
+++ b/index.html
@@ -591,9 +591,14 @@
                 <div class="col-md-6 text-md-end">
                     <div class="social-links">
                        <!--/<a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a> -->
-                        <a href="https://www.instagram.com/topgunpulverizacoes/" class="text-white me-3"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/topgunpulverizacoes.com/" class="text-white me-3"><i class="bi bi-instagram"></i></a>
                         <a href="https://www.linkedin.com/company/top-gun-pulveriza%C3%A7%C3%B5es/" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
-                        <a href="#" class="text-white"><i class="bi bi-envelope"></i></a>
+                        <a href="mailto:tgagro@pulverizacoes.com" class="text-white">
+                          <i class="bi bi-envelope"></i>
+                        </a>
+                        <a href="https://wa.me/5534998033258" class="text-white" target="_blank">
+                          <i class="bi bi-whatsapp"></i>
+                        </a>
                     </div>
                 </div>
             </div>
