--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
                         </button>
                         <div id="cotesia-opcoes" class="opcoes" style="display:none; margin-top:10px;">
                           <button class="btn btn-outline-success" onclick="window.location.href='programacao_cotesia.html'">Programação</button>
+                          <button class="btn btn-outline-success" onclick="window.location.href='status_operacional_cotesia.html'">Status Operacional</button>
                           <button class="btn btn-outline-success" onclick="window.location.href='rendimento_cotesia.html'">Rendimento</button>
                         </div>
                     </div>
