--- a/status_operacional_cotesia.html
+++ b/status_operacional_cotesia.html
@@ -106,7 +106,7 @@
 lucide.createIcons();
 
 /* Frente → Piloto */
-const PILOTOS = { "Frente 01":"Caio Brito", "Frente 02":"Ygor Lucas" };
+const PILOTOS = { "Frente 01":"Pedro Augusto", "Frente 02":"Maicon Silva" };
 document.getElementById("selFrente").addEventListener("change",()=>{
   document.getElementById("txtPiloto").value = PILOTOS[document.getElementById("selFrente").value] || "";
 });
@@ -174,4 +174,3 @@ function abrirWhats(){
 </script>
 </body>
 </html>
-
