--- a/rendimento_cotesia.html
+++ b/rendimento_cotesia.html
@@ -272,7 +272,7 @@ function fmtDateBRfromInput(yyyy_mm_dd){ if (!yyyy_mm_dd) return ''; const [y,m,
 function nowStrSP(){ const f = new Intl.DateTimeFormat('pt-BR', { timeZone:'America/Sao_Paulo', dateStyle:'short', timeStyle:'short' }); return f.format(new Date()); }
 
 /* ===== Frente → Piloto ===== */
-const PILOTOS = { 'Frente 01': 'Pedro Augusto', 'Frente 02': 'Maicon Silva' };
+const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Maicon Silva' };
 function setPilotByFrente(){ const frente = document.getElementById('selFrente').value || ''; document.getElementById('txtPiloto').value = PILOTOS[frente] || ''; }
 
 /* ===== API (Apps Script Web App) ===== */
@@ -506,6 +506,7 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
 
 
 
