--- a/status_operacional_cotesia.html
+++ b/status_operacional_cotesia.html
@@ -106,7 +106,7 @@
 lucide.createIcons();
 
 /* Frente → Piloto */
-const PILOTOS = { "Frente 01":"Pedro Augusto", "Frente 02":"Maicon Silva" };
+const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Maicon Silva" };
 document.getElementById("selFrente").addEventListener("change",()=>{
   document.getElementById("txtPiloto").value = PILOTOS[document.getElementById("selFrente").value] || "";
 });
@@ -174,3 +174,4 @@ function abrirWhats(){
 </script>
 </body>
 </html>
+
