--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
                         </button>
                         <div id="pulverizacao-opcoes" class="opcoes" style="display:none; margin-top:10px;">
                           <button class="btn btn-outline-primary" onclick="window.location.href='programacao_aplicacao.html'">Programação</button>
+                            <button class="btn btn-outline-primary" onclick="window.location.href='status_operacional_aplicacao.html'">Status Operacional</button>
                           <button class="btn btn-outline-primary" onclick="window.location.href='rendimento_aplicacao.html'">Rendimento</button>
                         </div>
                     </div>
@@ -916,3 +917,4 @@
     </script>
 </body>
 </html>
+
