--- a/programacao_cotesia.html
+++ b/programacao_cotesia.html
@@ -416,7 +416,7 @@ function buildMessage(){
   const uni  = document.getElementById('selUnidade').value || '—';
   const objG = document.getElementById('txtObjetivo').value || '';
 
-  let msg = `*Programação Cotesia 🪰 Top Gun*
+  let msg = `*Programação _Cotesia_ Top Gun*
 
 Data: ${dt ? fmtDateBRfromInput(dt) : 'Preencher'}
 Frente: ${fr}
@@ -499,3 +499,4 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
