--- a/programacao_cotesia.html
+++ b/programacao_cotesia.html
@@ -195,6 +195,7 @@
           <option value="" selected>Selecione…</option>
           <option value="Frente 01">Frente 01</option>
           <option value="Frente 02">Frente 02</option>
+          <option value="Frente 03">Frente 03</option> 
         </select>
       </div>
 
@@ -275,7 +276,7 @@ function fmtDateBRfromInput(yyyy_mm_dd){ if (!yyyy_mm_dd) return ''; const [y,m,
 function nowStrSP(){ const f = new Intl.DateTimeFormat('pt-BR', { timeZone: 'America/Sao_Paulo', dateStyle: 'short', timeStyle: 'short' }); return f.format(new Date()); }
 
 /* ===== Frente → Piloto ===== */
-const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Maicon Silva' };
+const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Rafael', 'Frente 03': 'Tiago' };
 function setPilotByFrente(){ const frente = document.getElementById('selFrente').value || ''; document.getElementById('txtPiloto').value = PILOTOS[frente] || ''; }
 
 /* ===== API (Apps Script Web App) ===== */
@@ -499,4 +500,5 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
 
