--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Programação de Aplicação — Top Gun</title>
+<title>Rendimento de Aplicação — Top Gun</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -29,7 +29,7 @@
   <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap gap-2">
     <div class="d-flex align-items-center gap-2">
       <i class="bi bi-calendar-check text-primary fs-4"></i>
-      <h1 class="h4 mb-0">Programação de Aplicação — Top Gun</h1>
+      <h1 class="h4 mb-0">Rendimento Aplicação — Top Gun</h1>
       <span class="badge text-bg-light border">v3 (com rendimento)</span>
     </div>
     <a href="index.html" class="btn btn-outline-secondary">
@@ -525,7 +525,7 @@ ${talhoesTxt.length ? talhoesTxt.join('\n') : '-'}
     });
 
     const header =
-`📅 *Programação para aplicação:* ${data}
+`📅 *Rendimento Aplicação:* ${data}
 
 *Unidade:* ${unidade||'-'}
 *Frente:* ${frente||'-'}
@@ -538,7 +538,7 @@ ${talhoesTxt.length ? talhoesTxt.join('\n') : '-'}
   const resumo =
 `\n*Resumo Geral:*
 *Qtd. Fazendas:* ${totalFaz}
-*Área programada:* ${totalAreaProg.toFixed(2).replace('.',',')} ha
+*Área O.S:* ${totalAreaProg.toFixed(2).replace('.',',')} ha
 *Área aplicada:* ${totalAreaApl.toFixed(2).replace('.',',')} ha`;
 
     const sepLine = '_______';
@@ -553,4 +553,5 @@ ${talhoesTxt.length ? talhoesTxt.join('\n') : '-'}
 </script>
 </body>
 </html>
+
 
